# CommentScraper

./: .gitignore  LICENSE  README.md  pyproject.toml
Instagram/: Login.py  browser_setup.py  find_posts.py  main.py  scraper.py  sentiment_analysis.py  text_processing.py
X/: XScrapy.py
